; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/misc/extr_guc.c_discard_stack_value.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/misc/extr_guc.c_discard_stack_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.config_generic = type { i32 }
%struct.TYPE_5__ = type { i32, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }
%struct.config_string = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.config_generic*, %struct.TYPE_5__*)* @discard_stack_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @discard_stack_value(%struct.config_generic* %0, %struct.TYPE_5__* %1) #0 {
  %3 = alloca %struct.config_generic*, align 8
  %4 = alloca %struct.TYPE_5__*, align 8
  store %struct.config_generic* %0, %struct.config_generic** %3, align 8
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %4, align 8
  %5 = load %struct.config_generic*, %struct.config_generic** %3, align 8
  %6 = getelementptr inbounds %struct.config_generic, %struct.config_generic* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  switch i32 %7, label %16 [
    i32 132, label %8
    i32 130, label %8
    i32 129, label %8
    i32 131, label %8
    i32 128, label %9
  ]

8:                                                ; preds = %2, %2, %2, %2
  br label %16

9:                                                ; preds = %2
  %10 = load %struct.config_generic*, %struct.config_generic** %3, align 8
  %11 = bitcast %struct.config_generic* %10 to %struct.config_string*
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 1
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = call i32 @set_string_field(%struct.config_string* %11, i32* %14, i32* null)
  br label %16

16:                                               ; preds = %2, %9, %8
  %17 = load %struct.config_generic*, %struct.config_generic** %3, align 8
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %18, i32 0, i32 0
  %20 = call i32 @set_extra_field(%struct.config_generic* %17, i32* %19, i32* null)
  ret void
}

declare dso_local i32 @set_string_field(%struct.config_string*, i32*, i32*) #1

declare dso_local i32 @set_extra_field(%struct.config_generic*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
